EQL: Add case-sensitive and insensitive integration tests
(cherry picked from commit 28a3f55e9bf7e9374fcac9efe77fda82d4bf006d)