@@ -34,6 +34,7 @@ import org.junit.Before;
 import org.junit.BeforeClass;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -130,7 +131,7 @@ public abstract class CommonEqlActionTestCase extends ESRestTestCase {
             boolean supported = true;
             // Check if spec is supported, simple iteration, cause the list is short.
             for (EqlSpec unSpec : unsupportedSpecs) {
-                if (spec.query() != null && spec.query().equals(unSpec.query())) {
+                if (spec.equals(unSpec)) {
                     supported = false;
                     break;
                 }
@@ -170,7 +171,13 @@ public abstract class CommonEqlActionTestCase extends ESRestTestCase {
     }
 
     public void test() throws Exception {
-        assertResponse(runQuery(testIndexName, spec.query()));
+        if (spec.supportsCaseSensitive()) {
+            assertResponse(runQuery(testIndexName, spec.query(), true));
+        }
+
+        if (spec.supportsCaseInsensitive()) {
+            assertResponse(runQuery(testIndexName, spec.query(), false));
+        }
     }
 
     protected void assertResponse(EqlSearchResponse response) {
@@ -186,8 +193,8 @@ public abstract class CommonEqlActionTestCase extends ESRestTestCase {
         }
     }
 
-    protected EqlSearchResponse runQuery(String index, String query) throws Exception {
-        EqlSearchRequest request = new EqlSearchRequest(testIndexName, query);
+    protected EqlSearchResponse runQuery(String index, String query, boolean isCaseSensitive) throws Exception {
+        EqlSearchRequest request = new EqlSearchRequest(testIndexName, query, isCaseSensitive);
         request.tiebreakerField("event.sequence");
         return eqlClient().search(request, RequestOptions.DEFAULT);
     }
@@ -223,7 +230,7 @@ public abstract class CommonEqlActionTestCase extends ESRestTestCase {
                     client(),
                     ignore -> {
                     },
-                    List.of()) {
+                    Collections.emptyList()) {
             };
         }
         return highLevelClient;
